// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.runtime.kubernetes.kubedef;

option go_package = "namespacelabs.dev/foundation/runtime/kubernetes/kubedef";

message SpecExtension {
    // XXX ideally we'd use Kubernetes protos here.
    string service_account = 3;
    repeated Volume volume = 1;
    repeated Annotation annotation = 2;

    message Volume {
        string name = 1;

        oneof volume_type {
            Secret secret = 2;
            ConfigMap config_map = 3;
        }

        message Secret {
            string secret_name = 1;
        }

        message ConfigMap {
            string name = 1;
            string config_map_name = 2;
            repeated Item item = 3;

            message Item {
                string key = 1;
                string path = 2;
            }
        }
    }

    message Annotation {
        string key = 1;
        string value = 2;
    }
}

message ContainerExtension {
    repeated VolumeMount volume_mount = 1;
    repeated Env env = 2;
    repeated Arg arg = 4;
    repeated InitContainer init_container = 3;

    message VolumeMount {
        string name = 1;
        bool read_only = 2;
        string mount_path = 3;
        bool mount_on_init = 4; // Whether to mount this volume also for init containers.
    }

    message Env {
        string name = 1;
        string value = 2;
    }

    message Arg {
        string name = 1;
        string value = 2;
    }

    message InitContainer {
        string package_name = 1;
        repeated string arg = 2;
    }
}

message OpApply {
    string resource = 1;
    string namespace = 2;
    string name = 3;
    string body_json = 4;
}

message OpDelete {
    string resource = 1;
    string namespace = 2;
    string name = 3;
}

message OpDeleteList {
    string resource = 1;
    string namespace = 2;
    string label_selector = 3;
}